--- a/models/checkj.ipynb
+++ b/models/checkj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d2873a2e-f6ee-4550-b31a-ef656f6941ce",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting catboost\n",
-      "  Downloading catboost-1.2.8-cp311-cp311-macosx_11_0_universal2.whl.metadata (1.4 kB)\n",
-      "Collecting graphviz (from catboost)\n",
-      "  Downloading graphviz-0.21-py3-none-any.whl.metadata (12 kB)\n",
+      "Requirement already satisfied: catboost in /opt/anaconda3/lib/python3.11/site-packages (1.2.8)\n",
+      "Requirement already satisfied: graphviz in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (0.21)\n",
       "Requirement already satisfied: matplotlib in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (3.10.0)\n",
       "Requirement already satisfied: numpy<3.0,>=1.16.0 in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (1.26.4)\n",
       "Requirement already satisfied: pandas>=0.24 in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (2.3.1)\n",
@@ -31,12 +29,6 @@
       "Requirement already satisfied: pillow>=8 in /opt/anaconda3/lib/python3.11/site-packages (from matplotlib->catboost) (11.3.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in /opt/anaconda3/lib/python3.11/site-packages (from matplotlib->catboost) (3.2.0)\n",
       "Requirement already satisfied: narwhals>=1.15.1 in /opt/anaconda3/lib/python3.11/site-packages (from plotly->catboost) (1.31.0)\n",
-      "Downloading catboost-1.2.8-cp311-cp311-macosx_11_0_universal2.whl (27.8 MB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m27.8/27.8 MB\u001b[0m \u001b[31m993.5 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[36m0:00:01\u001b[0mm eta \u001b[36m0:00:03\u001b[0m\n",
-      "\u001b[?25hDownloading graphviz-0.21-py3-none-any.whl (47 kB)\n",
-      "Installing collected packages: graphviz, catboost\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [catboost]━━\u001b[0m \u001b[32m1/2\u001b[0m [catboost]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed catboost-1.2.8 graphviz-0.21\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -47,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "83c4426b-6219-4a20-862b-8a74793e0499",
    "metadata": {},
    "outputs": [
@@ -55,14 +47,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting lightgbm\n",
-      "  Downloading lightgbm-4.6.0-py3-none-macosx_12_0_arm64.whl.metadata (17 kB)\n",
+      "Requirement already satisfied: lightgbm in /opt/anaconda3/lib/python3.11/site-packages (4.6.0)\n",
       "Requirement already satisfied: numpy>=1.17.0 in /opt/anaconda3/lib/python3.11/site-packages (from lightgbm) (1.26.4)\n",
       "Requirement already satisfied: scipy in /opt/anaconda3/lib/python3.11/site-packages (from lightgbm) (1.15.3)\n",
-      "Downloading lightgbm-4.6.0-py3-none-macosx_12_0_arm64.whl (1.6 MB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: lightgbm\n",
-      "Successfully installed lightgbm-4.6.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -73,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "7724ff53-187c-4654-b7d1-47ab881628ce",
    "metadata": {},
    "outputs": [
@@ -83,13 +70,13 @@
      "text": [
       "Training shape: (15326, 12)\n",
       "Testing shape: (3832, 12)\n",
-      "0:\tlearn: 0.7833094\ttest: 0.7836639\tbest: 0.7836639 (0)\ttotal: 11.8ms\tremaining: 14.1s\n",
-      "200:\tlearn: 0.8357040\ttest: 0.8019311\tbest: 0.8027140 (34)\ttotal: 1.92s\tremaining: 9.55s\n",
-      "400:\tlearn: 0.8629779\ttest: 0.8019311\tbest: 0.8037578 (341)\ttotal: 4.06s\tremaining: 8.09s\n",
-      "600:\tlearn: 0.8824873\ttest: 0.8032359\tbest: 0.8048017 (541)\ttotal: 6.08s\tremaining: 6.07s\n",
-      "800:\tlearn: 0.9004306\ttest: 0.8003653\tbest: 0.8048017 (541)\ttotal: 8.23s\tremaining: 4.1s\n",
-      "1000:\tlearn: 0.9153073\ttest: 0.8029749\tbest: 0.8048017 (541)\ttotal: 10.3s\tremaining: 2.04s\n",
-      "1199:\tlearn: 0.9252251\ttest: 0.8014092\tbest: 0.8048017 (541)\ttotal: 12.4s\tremaining: 0us\n",
+      "0:\tlearn: 0.7833094\ttest: 0.7836639\tbest: 0.7836639 (0)\ttotal: 72.7ms\tremaining: 1m 27s\n",
+      "200:\tlearn: 0.8357040\ttest: 0.8019311\tbest: 0.8027140 (34)\ttotal: 2.04s\tremaining: 10.1s\n",
+      "400:\tlearn: 0.8629779\ttest: 0.8019311\tbest: 0.8037578 (341)\ttotal: 4.29s\tremaining: 8.54s\n",
+      "600:\tlearn: 0.8824873\ttest: 0.8032359\tbest: 0.8048017 (541)\ttotal: 6.42s\tremaining: 6.39s\n",
+      "800:\tlearn: 0.9004306\ttest: 0.8003653\tbest: 0.8048017 (541)\ttotal: 8.52s\tremaining: 4.24s\n",
+      "1000:\tlearn: 0.9153073\ttest: 0.8029749\tbest: 0.8048017 (541)\ttotal: 10.6s\tremaining: 2.11s\n",
+      "1199:\tlearn: 0.9252251\ttest: 0.8014092\tbest: 0.8048017 (541)\ttotal: 12.8s\tremaining: 0us\n",
       "\n",
       "bestTest = 0.8048016701\n",
       "bestIteration = 541\n",
@@ -135,7 +122,7 @@
     "# ----------------------\n",
     "# 1. Load Data\n",
     "# ----------------------\n",
-    "df = pd.read_csv(\"DS_Emp.csv\")\n",
+    "df = pd.read_csv(\"../datasets/DS_Emp.csv\")\n",
     "\n",
     "# Drop ID column if present\n",
     "if \"enrollee_id\" in df.columns:\n",
@@ -228,9 +215,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
