Working with fully integrated UI

--- a/models/checkj.ipynb
+++ b/models/checkj.ipynb
@@ -205,12 +205,385 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08e79478",
+   "metadata": {},
+   "source": [
+    "Making a Predictive System"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "811ec404",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>city_development_index</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>relevent_experience</th>\n",
+       "      <th>enrolled_university</th>\n",
+       "      <th>education_level</th>\n",
+       "      <th>major_discipline</th>\n",
+       "      <th>experience</th>\n",
+       "      <th>company_size</th>\n",
+       "      <th>company_type</th>\n",
+       "      <th>last_new_job</th>\n",
+       "      <th>training_hours</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>city_103</td>\n",
+       "      <td>0.920</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Has relevent experience</td>\n",
+       "      <td>no_enrollment</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>STEM</td>\n",
+       "      <td>&gt;20</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>city_40</td>\n",
+       "      <td>0.776</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No relevent experience</td>\n",
+       "      <td>no_enrollment</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>STEM</td>\n",
+       "      <td>15</td>\n",
+       "      <td>50-99</td>\n",
+       "      <td>Pvt Ltd</td>\n",
+       "      <td>&gt;4</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>city_21</td>\n",
+       "      <td>0.624</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>No relevent experience</td>\n",
+       "      <td>Full time course</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>STEM</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>never</td>\n",
+       "      <td>83</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>city_115</td>\n",
+       "      <td>0.789</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>No relevent experience</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Business Degree</td>\n",
+       "      <td>&lt;1</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Pvt Ltd</td>\n",
+       "      <td>never</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>city_162</td>\n",
+       "      <td>0.767</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Has relevent experience</td>\n",
+       "      <td>no_enrollment</td>\n",
+       "      <td>Masters</td>\n",
+       "      <td>STEM</td>\n",
+       "      <td>&gt;20</td>\n",
+       "      <td>50-99</td>\n",
+       "      <td>Funded Startup</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       city  city_development_index   gender      relevent_experience  \\\n",
+       "0  city_103                   0.920     Male  Has relevent experience   \n",
+       "1   city_40                   0.776     Male   No relevent experience   \n",
+       "2   city_21                   0.624  Unknown   No relevent experience   \n",
+       "3  city_115                   0.789  Unknown   No relevent experience   \n",
+       "4  city_162                   0.767     Male  Has relevent experience   \n",
+       "\n",
+       "  enrolled_university education_level major_discipline experience  \\\n",
+       "0       no_enrollment        Graduate             STEM        >20   \n",
+       "1       no_enrollment        Graduate             STEM         15   \n",
+       "2    Full time course        Graduate             STEM          5   \n",
+       "3             Unknown        Graduate  Business Degree         <1   \n",
+       "4       no_enrollment         Masters             STEM        >20   \n",
+       "\n",
+       "  company_size    company_type last_new_job  training_hours  target  \n",
+       "0      Unknown         Unknown            1              36       1  \n",
+       "1        50-99         Pvt Ltd           >4              47       0  \n",
+       "2      Unknown         Unknown        never              83       0  \n",
+       "3      Unknown         Pvt Ltd        never              52       1  \n",
+       "4        50-99  Funded Startup            4               8       0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5480ce1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                Feature Id  Importances\n",
+      "0                     city    12.778428\n",
+      "1             company_size    12.694032\n",
+      "2               experience    10.553802\n",
+      "3   city_development_index    10.084312\n",
+      "4             last_new_job     9.483183\n",
+      "5           training_hours     8.904599\n",
+      "6             company_type     8.888123\n",
+      "7          education_level     7.977477\n",
+      "8      enrolled_university     5.714343\n",
+      "9         major_discipline     5.459459\n",
+      "10                  gender     4.729566\n",
+      "11     relevent_experience     2.732677\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Feature importance\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "importances = model.get_feature_importance(prettified=True)\n",
+    "print(importances)\n",
+    "\n",
+    "top_n = 10\n",
+    "top_features = importances.sort_values(by=\"Importances\", ascending=False).head(top_n)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "b78edd59-0d2c-4a22-a3de-73048a4787e1",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔮 Prediction: 1\n",
+      "✅ The candidate is likely to change jobs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------\n",
+    "# 8. Making a Predictive System (Job Change Prediction)\n",
+    "# ----------------------\n",
+    "\n",
+    "# Example input data (one employee's profile)\n",
+    "# Format must match features in training set\n",
+    "input_data = {\n",
+    "   \"city\": \"city_21\",                   # less developed city\n",
+    "    \"city_development_index\": 0.45,      # low development index\n",
+    "    \"gender\": \"Female\",\n",
+    "    \"relevent_experience\": \"No relevent experience\",\n",
+    "    \"enrolled_university\": \"Full time course\",\n",
+    "    \"education_level\": \"Graduate\",\n",
+    "    \"major_discipline\": \"Other\",\n",
+    "    \"experience\": \"2\",                   # very low experience\n",
+    "    \"company_size\": \"<10\",               # very small company\n",
+    "    \"company_type\": \"Startup\",\n",
+    "    \"last_new_job\": \">4\",                # stuck for years\n",
+    "    \"training_hours\": 8    \n",
+    "}\n",
+    "\n",
+    "# Convert to DataFrame (CatBoost needs same format as training data)\n",
+    "input_df = pd.DataFrame([input_data])\n",
+    "\n",
+    "# Scale numeric columns same as training\n",
+    "input_df[num_cols] = scaler.transform(input_df[num_cols])\n",
+    "\n",
+    "# Predict\n",
+    "prediction = model.predict(input_df)\n",
+    "\n",
+    "print(\"🔮 Prediction:\", prediction[0])\n",
+    "\n",
+    "if prediction[0] == 0:\n",
+    "    print(\"❌ The candidate is unlikely to change jobs.\")\n",
+    "else:\n",
+    "    print(\"✅ The candidate is likely to change jobs.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9293ecc3",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "57b41c13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model saved as dsJobPrediction_model.sav\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Save the trained CatBoost model\n",
+    "filename = 'dsJobPrediction_model.sav'\n",
+    "pickle.dump(model, open(filename, 'wb'))\n",
+    "\n",
+    "print(\"✅ Model saved as dsJobPrediction_model.sav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9aee9c60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading the saved model\n",
+    "loaded_model = pickle.load(open('dsJobPrediction_model.sav', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c70513bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔮 Prediction: 0\n",
+      "❌ The candidate is unlikely to change jobs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_data = {\n",
+    "    \"city\": \"city_103\",                  # developed city\n",
+    "    \"city_development_index\": 0.92,      # high development index\n",
+    "    \"gender\": \"Male\",\n",
+    "    \"relevent_experience\": \"Has relevent experience\",\n",
+    "    \"enrolled_university\": \"no_enrollment\",\n",
+    "    \"education_level\": \"Masters\",\n",
+    "    \"major_discipline\": \"STEM\",\n",
+    "    \"experience\": \"7\",                   # mid-level stable\n",
+    "    \"company_size\": \"1000-4999\",         # large company\n",
+    "    \"company_type\": \"Pvt Ltd\",\n",
+    "    \"last_new_job\": \"1\",                 # changed job recently\n",
+    "    \"training_hours\": 50       \n",
+    "}\n",
+    "\n",
+    "# Convert to DataFrame (CatBoost needs same format as training data)\n",
+    "input_df = pd.DataFrame([input_data])\n",
+    "\n",
+    "# Scale numeric columns same as training\n",
+    "input_df[num_cols] = scaler.transform(input_df[num_cols])\n",
+    "\n",
+    "# Predict\n",
+    "prediction = loaded_model.predict(input_df)\n",
+    "\n",
+    "print(\"🔮 Prediction:\", prediction[0])\n",
+    "\n",
+    "if prediction[0] == 0:\n",
+    "    print(\"❌ The candidate is unlikely to change jobs.\")\n",
+    "else:\n",
+    "    print(\"✅ The candidate is likely to change jobs.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1a641f5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "city\n",
+      "city_development_index\n",
+      "gender\n",
+      "relevent_experience\n",
+      "enrolled_university\n",
+      "education_level\n",
+      "major_discipline\n",
+      "experience\n",
+      "company_size\n",
+      "company_type\n",
+      "last_new_job\n",
+      "training_hours\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in X.columns:\n",
+    "  print(column)"
+   ]
   }
  ],
  "metadata": {
