--- a/models/checkj.ipynb
+++ b/models/checkj.ipynb
@@ -2,65 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d2873a2e-f6ee-4550-b31a-ef656f6941ce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: catboost in /opt/anaconda3/lib/python3.11/site-packages (1.2.8)\n",
-      "Requirement already satisfied: graphviz in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (0.21)\n",
-      "Requirement already satisfied: matplotlib in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (3.10.0)\n",
-      "Requirement already satisfied: numpy<3.0,>=1.16.0 in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (1.26.4)\n",
-      "Requirement already satisfied: pandas>=0.24 in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (2.3.1)\n",
-      "Requirement already satisfied: scipy in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (1.15.3)\n",
-      "Requirement already satisfied: plotly in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (6.0.1)\n",
-      "Requirement already satisfied: six in /opt/anaconda3/lib/python3.11/site-packages (from catboost) (1.17.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/anaconda3/lib/python3.11/site-packages (from pandas>=0.24->catboost) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/anaconda3/lib/python3.11/site-packages (from pandas>=0.24->catboost) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /opt/anaconda3/lib/python3.11/site-packages (from pandas>=0.24->catboost) (2025.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /opt/anaconda3/lib/python3.11/site-packages (from matplotlib->catboost) (1.3.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/anaconda3/lib/python3.11/site-packages (from matplotlib->catboost) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /opt/anaconda3/lib/python3.11/site-packages (from matplotlib->catboost) (4.55.3)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /opt/anaconda3/lib/python3.11/site-packages (from matplotlib->catboost) (1.4.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/lib/python3.11/site-packages (from matplotlib->catboost) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in /opt/anaconda3/lib/python3.11/site-packages (from matplotlib->catboost) (11.3.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /opt/anaconda3/lib/python3.11/site-packages (from matplotlib->catboost) (3.2.0)\n",
-      "Requirement already satisfied: narwhals>=1.15.1 in /opt/anaconda3/lib/python3.11/site-packages (from plotly->catboost) (1.31.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install catboost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "83c4426b-6219-4a20-862b-8a74793e0499",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: lightgbm in /opt/anaconda3/lib/python3.11/site-packages (4.6.0)\n",
-      "Requirement already satisfied: numpy>=1.17.0 in /opt/anaconda3/lib/python3.11/site-packages (from lightgbm) (1.26.4)\n",
-      "Requirement already satisfied: scipy in /opt/anaconda3/lib/python3.11/site-packages (from lightgbm) (1.15.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install lightgbm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "7724ff53-187c-4654-b7d1-47ab881628ce",
    "metadata": {},
    "outputs": [
@@ -70,13 +32,13 @@
      "text": [
       "Training shape: (15326, 12)\n",
       "Testing shape: (3832, 12)\n",
-      "0:\tlearn: 0.7833094\ttest: 0.7836639\tbest: 0.7836639 (0)\ttotal: 72.7ms\tremaining: 1m 27s\n",
-      "200:\tlearn: 0.8357040\ttest: 0.8019311\tbest: 0.8027140 (34)\ttotal: 2.04s\tremaining: 10.1s\n",
-      "400:\tlearn: 0.8629779\ttest: 0.8019311\tbest: 0.8037578 (341)\ttotal: 4.29s\tremaining: 8.54s\n",
-      "600:\tlearn: 0.8824873\ttest: 0.8032359\tbest: 0.8048017 (541)\ttotal: 6.42s\tremaining: 6.39s\n",
-      "800:\tlearn: 0.9004306\ttest: 0.8003653\tbest: 0.8048017 (541)\ttotal: 8.52s\tremaining: 4.24s\n",
-      "1000:\tlearn: 0.9153073\ttest: 0.8029749\tbest: 0.8048017 (541)\ttotal: 10.6s\tremaining: 2.11s\n",
-      "1199:\tlearn: 0.9252251\ttest: 0.8014092\tbest: 0.8048017 (541)\ttotal: 12.8s\tremaining: 0us\n",
+      "0:\tlearn: 0.7833094\ttest: 0.7836639\tbest: 0.7836639 (0)\ttotal: 11.9ms\tremaining: 14.2s\n",
+      "200:\tlearn: 0.8357040\ttest: 0.8019311\tbest: 0.8027140 (34)\ttotal: 2.05s\tremaining: 10.2s\n",
+      "400:\tlearn: 0.8629779\ttest: 0.8019311\tbest: 0.8037578 (341)\ttotal: 4.25s\tremaining: 8.48s\n",
+      "600:\tlearn: 0.8824873\ttest: 0.8032359\tbest: 0.8048017 (541)\ttotal: 6.45s\tremaining: 6.43s\n",
+      "800:\tlearn: 0.9004306\ttest: 0.8003653\tbest: 0.8048017 (541)\ttotal: 8.64s\tremaining: 4.3s\n",
+      "1000:\tlearn: 0.9153073\ttest: 0.8029749\tbest: 0.8048017 (541)\ttotal: 10.8s\tremaining: 2.15s\n",
+      "1199:\tlearn: 0.9252251\ttest: 0.8014092\tbest: 0.8048017 (541)\ttotal: 13.1s\tremaining: 0us\n",
       "\n",
       "bestTest = 0.8048016701\n",
       "bestIteration = 541\n",
@@ -187,7 +149,7 @@
     "# 5. Evaluation\n",
     "# ----------------------\n",
     "y_pred = model.predict(X_test)\n",
-    "\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"\\n✅ Test Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
@@ -214,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "811ec404",
    "metadata": {},
    "outputs": [
@@ -362,7 +324,7 @@
        "4        50-99  Funded Startup            4               8       0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "5480ce1c",
    "metadata": {},
    "outputs": [
@@ -411,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "b78edd59-0d2c-4a22-a3de-73048a4787e1",
    "metadata": {},
    "outputs": [
@@ -465,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "9293ecc3",
    "metadata": {},
    "outputs": [],
@@ -475,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "57b41c13",
    "metadata": {},
    "outputs": [
@@ -492,13 +454,15 @@
     "# Save the trained CatBoost model\n",
     "filename = 'dsJobPrediction_model.sav'\n",
     "pickle.dump(model, open(filename, 'wb'))\n",
+    "pickle.dump(scaler, open('scaler.pkl', 'wb'))\n",
+    "pickle.dump(accuracy * 100, open('job_model_accuracy.pkl', 'wb'))\n",
     "\n",
     "print(\"✅ Model saved as dsJobPrediction_model.sav\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "9aee9c60",
    "metadata": {},
    "outputs": [],
@@ -509,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "c70513bd",
    "metadata": {},
    "outputs": [
@@ -557,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "1a641f5d",
    "metadata": {},
    "outputs": [
@@ -583,6 +547,54 @@
    "source": [
     "for column in X.columns:\n",
     "  print(column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "33bc2e87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔮 Prediction: 1\n",
+      "✅ The candidate is likely to change jobs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_data = {\n",
+    "    \"city\": \"city_21\",                   # less developed city\n",
+    "    \"city_development_index\": 0.45,      # low development index\n",
+    "    \"gender\": \"Female\",\n",
+    "    \"relevent_experience\": \"No relevent experience\",\n",
+    "    \"enrolled_university\": \"Full time course\",\n",
+    "    \"education_level\": \"Graduate\",\n",
+    "    \"major_discipline\": \"Other\",\n",
+    "    \"experience\": \"2\",                   # very low experience\n",
+    "    \"company_size\": \"<10\",               # very small company\n",
+    "    \"company_type\": \"Startup\",\n",
+    "    \"last_new_job\": \">4\",                # stuck for years\n",
+    "    \"training_hours\": 8 \n",
+    "}\n",
+    "\n",
+    "# Convert to DataFrame (CatBoost needs same format as training data)\n",
+    "input_df = pd.DataFrame([input_data])\n",
+    "\n",
+    "# Scale numeric columns same as training\n",
+    "input_df[num_cols] = scaler.transform(input_df[num_cols])\n",
+    "\n",
+    "# Predict\n",
+    "prediction = loaded_model.predict(input_df)\n",
+    "\n",
+    "print(\"🔮 Prediction:\", prediction[0])\n",
+    "\n",
+    "if prediction[0] == 0:\n",
+    "    print(\"❌ The candidate is unlikely to change jobs.\")\n",
+    "else:\n",
+    "    print(\"✅ The candidate is likely to change jobs.\")"
    ]
   }
  ],
